testsuite/tests/polykinds/T13985.stderr

T13985.hs:13:41: error: Not in scope: type variable ‘k’

T13985.hs:16:43: error: Not in scope: type variable ‘a’

T13985.hs:23:26: error: Not in scope: type variable ‘k’

T13985.hs:24:37: error: Not in scope: type variable ‘a’

T13985.hs:28:39: error: Not in scope: type variable ‘x’
